Solved Message_Order.cc and Class_Template.cc
Signed-off-by: Ulysses Carlos <ulycarlos@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,11 @@ add_executable(CountingValleys Counting_Valleys.cpp)
 add_executable(Jump_Cloud Jump_Cloud.c)
 add_executable(main main.cpp)
 add_executable(Map Map.cpp)
-add_executable(test_string test_string.cpp)
+#add_executable(test_string test_string.cpp)
 add_executable(Repeated_String Repeated_String.c)
 add_executable(VLA VLA.cc)
 add_executable(Day15 Day15.cpp)
 add_executable(Day18 Day18.cc)
 add_executable(AttributeParser AttributeParser.cc)
+add_executable(Class_Template_Alternative Class_Template.cc)
+add_executable(Class_Template Class_Template_Their_Solution.cc)
