--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,11 @@ add_executable(Day18 Day18.cc)
 add_executable(AttributeParser AttributeParser.cc)
 add_executable(Class_Template_Alternative Class_Template.cc)
 add_executable(Class_Template Class_Template_Their_Solution.cc)
+add_executable(Accessing_Inherited_Functions Accessing_Inherited_Functions.cc)
+add_executable(Box_It Box_It.cc)
+add_executable(Classes_and_Objects Classes_and_Objects.cc)
+add_executable(Inherited_Code Inherited_Code.cc)
+add_executable(Sorting_String_Arrays Sorting_String_Arrays.c)
+add_executable(Test_Sorting Test_Sorting.c)
+add_executable(Student_Marks_Sum C/Students_Marks_Sum.c)
+add_executable(Print_Tokens C/Print_Tokens.c)
